--- a/Informe/lr.tex
+++ b/Informe/lr.tex
@@ -36,21 +36,21 @@
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - CONFIGURACION}
 \begin{enumerate}
-\item Permitir la configuración estática del monto mínimo de los pozos: Se podrá permitir configurar el monto minimo que debe superar un pozo antes de poder entregarlo.  \nf - \dd
+\item Permitir la configuración estática del monto mínimo de los pozos: Se podrá permitir configurar el monto minimo que debe superar un pozo antes de poder entregarlo.  \nf - \dd. \rrr \ref{4a}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - FICHAS}
 \begin{enumerate}
-\item Las apuestas se harán por medio de fichas: En todos los juegos el jugador podrá elegir el monto a apostar seleccionando de entre los valores establecidos de las fichas.  \ff - \ii
-\item Las fichas serán ilimitadas: No habra una cantidad fija de fichas sino que se dispondrá de ellas en un numero ilimitado.  \ff - \ii
-\item El valor de las fichas debe poder configurarse por el administrador: Cada vez que el casino abre al administrador configurara los valores posibles de las fichas.  \nf - \ii
+\item Las apuestas se harán por medio de fichas: En todos los juegos el jugador podrá elegir el monto a apostar seleccionando de entre los valores establecidos de las fichas.  \ff - \ii. \rrr \ref{5a1} y en \ref{5a2}
+\item Las fichas serán ilimitadas: No habra una cantidad fija de fichas sino que se dispondrá de ellas en un numero ilimitado.  \ff - \ii. \rrr \ref{5b1} y en \ref{5b2}
+\item El valor de las fichas debe poder configurarse por el administrador: Cada vez que el casino abre al administrador configurara los valores posibles de las fichas.  \nf - \ii. \rrr \ref{5c}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - REPORTES}
 \begin{enumerate}
-\item Generar informe electrónico: Ranking de jugadores: Se generará un informe con los jugadores que más dinero ganaron en el día desde que abrio el casino, como también los que más dinero perdieron. \ff - \ii
-\item Generar informe electronico: Estado Actual: Se generará un informe con el estado del casino y su saldo y también el de los clientes. \ff - \ii
-\item Generar informe electronico: Detalle de movimientos por jugador: Se generará un informe con todas las apuestas, premios ganados, y montos ganados por cada jugador que haya ingresado al casino. \ff - \ii
+\item Generar informe electrónico: Ranking de jugadores: Se generará un informe con los jugadores que más dinero ganaron en el día desde que abrio el casino, como también los que más dinero perdieron. \ff - \ii. \rrr \ref{6a}
+\item Generar informe electronico: Estado Actual: Se generará un informe con el estado del casino y su saldo y también el de los clientes. \ff - \ii. \rrr \ref{6b}
+\item Generar informe electronico: Detalle de movimientos por jugador: Se generará un informe con todas las apuestas, premios ganados, y montos ganados por cada jugador que haya ingresado al casino. \ff - \ii. \rrr \ref{6c}
 \end{enumerate}
 
 \item\textsc{REQUERIMIENTOS GENERALES DEL CASINO - JUGADAS Y POZOS}
