* todo lista hasta 3b

--- a/Informe/CasinoOnline.tex
+++ b/Informe/CasinoOnline.tex
@@ -152,14 +152,16 @@ El casino puede entrar en un ``modo dirigido'' si así lo requiriera o deseara el
 
 	\subsection{Organización del informe}
 
+\textbf{El Informe esta organizado de la siguiente manera:}
+\vskip1cm
+
 \textbf{1. Introducción:} Una introducción al mismo documento, convenciones de notación adoptada por los desarrolladores, destinatarios del presente documento y otros documentos relacionados para posibles consultas. Incluye ademas un preámbulo y breve descripción del problema a resolver.
-
+\vskip1cm
 \textbf{2. Descripción General:} Una breve descripción del problema y los factores que afectan al producto, su alcance, requerimientos y limitaciones. Muestra la perspectiva del producto a realizar y sus posibilidades de acoplamiento futuro. Las funciones principales que deberá incluir y características esperadas de los usuarios del producto. Restricciones impuestas sobre el desarrollo, y dependencias asumidas.
-
+\vskip1cm
 \textbf{3. Análisis por funcionalidad:}
-
-En la primera la seccion 3 se estudia el proyecto casino online a traves de distintas herramientas conceptuales que ayudan a reprensentar distintos factores involucrados, comportamientos e interacciones del problema a resolver. Cada herramienta contiene una breve explicación de como debe leerse.
-
+\begin{itemize}
+\item En la primera la seccion 3 se estudia el proyecto casino online a traves de distintas herramientas conceptuales que ayudan a reprensentar distintos factores involucrados, comportamientos e interacciones del problema a resolver. Cada herramienta contiene una breve explicación de como debe leerse.
 \begin{itemize}
 	\item \textbf{Relevamiento de requerimientos Generales} 
 	\item \textbf{Analisis de agentes involucrados en el sistema}
@@ -168,7 +170,7 @@ En la primera la seccion 3 se estudia el proyecto casino online a traves de dist
 	\item \textbf{Lista de Requerimientos}
 \end{itemize}
 
-El la segunda parte se agruparon los temas por funcionalidad, explicando cada una de ellas con las herramientas que mejor especifiquen el concepto
+\item El la segunda parte se agruparon los temas por funcionalidad, explicando cada una de ellas con las herramientas que mejor especifiquen el concepto
 
 \begin{itemize}
 	\item Registracion y Ingreso al casino online y modificacion de saldo: Temas \textsl{Registracion, Modificacion de saldo, Ingreso y egreso del casino}
@@ -180,6 +182,16 @@ El la segunda parte se agruparon los temas por funcionalidad, explicando cada un
 	\item Generacion de reportes: Temas \textsl{Generacion de reportes; Ranking de Jugadores, Estado Actual, Detalle de movimientos por jugador}
 	\item Pago de jugadas y premios: Temas \textsl{Pago jugada Tragamonedas, Pago jugada Craps}
 \end{itemize}
+
+\textbf{4. Glosario}
+\vskip0.5cm
+\textbf{5. Anexos:}
+\begin{itemize}
+\item Conclusiones.
+\end{itemize}
+
+\end{itemize}
+
 
 \section{Descripción General}
 	\subsection{Perspectiva del producto}
