* soluciona problema color  * actualizo imagen DC

--- a/Informe/CasinoOnline.tex
+++ b/Informe/CasinoOnline.tex
@@ -24,7 +24,7 @@
 
 \usepackage{lastpage} %ultima pagina
 
-\usepackage{pstricks}
+%\usepackage{pstricks}
 %\usepackage{uml} %UML
 
 \usepackage{listings}
