--- a/trunk/Informe/CasinoOnline.tex
+++ b/trunk/Informe/CasinoOnline.tex
@@ -24,7 +24,7 @@
 
 \usepackage{lastpage} %ultima pagina
 
-\usepackage{pstricks}
+%\usepackage{pstricks}
 %\usepackage{uml} %UML
 
 \usepackage{listings}
